--- a/app/src/main/res/layout-v23/activity_rewards.xml
+++ b/app/src/main/res/layout-v23/activity_rewards.xml
@@ -82,7 +82,7 @@
                 app:layout_constraintTop_toTopOf="@+id/rewards_white_box_top" />
 
             <TextView
-                android:id="@+id/point_bar_leftside"
+                android:id="@+id/point_bar_leftside_gray"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -95,7 +95,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/point_count_text" />
 
             <TextView
-                android:id="@+id/point_bar_leftside2"
+                android:id="@+id/point_bar_red_p1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
@@ -113,9 +113,9 @@
                 android:layout_height="50dp"
                 android:layout_marginStart="-5dp"
                 android:background="@drawable/settings_page_all_gray_curved_corners"
-                app:layout_constraintBottom_toBottomOf="@+id/point_bar_leftside"
-                app:layout_constraintStart_toEndOf="@+id/point_bar_leftside"
-                app:layout_constraintTop_toTopOf="@+id/point_bar_leftside" />
+                app:layout_constraintBottom_toBottomOf="@+id/point_bar_leftside_gray"
+                app:layout_constraintStart_toEndOf="@+id/point_bar_leftside_gray"
+                app:layout_constraintTop_toTopOf="@+id/point_bar_leftside_gray" />
 
             <ImageView
                 android:id="@+id/coffee_cup"
