--- a/app/src/main/res/layout/activity_customer_support_page.xml
+++ b/app/src/main/res/layout/activity_customer_support_page.xml
@@ -141,6 +141,7 @@
         android:id="@+id/red_back_button_2"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/profile_page_all_curved_corners_red"
         android:fontFamily="@font/sofia_regular"
         android:foreground="@drawable/ripple_grayc1c1"
@@ -155,6 +156,7 @@
         app:backgroundTint="@color/red_ec"
         app:layout_constraintBottom_toBottomOf="@+id/whiteBox5"
         app:layout_constraintEnd_toEndOf="@+id/whiteBox5"
+        app:layout_constraintHorizontal_bias="0.485"
         app:layout_constraintStart_toStartOf="@+id/whiteBox5"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
