--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -81,8 +81,6 @@
         android:id="@+id/cart_button"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/roundedbutton"
-        android:backgroundTint="@color/red_ec"
         android:onClick="goToCartButton"
         android:text=" Go to Cart "
         android:letterSpacing="0.25"
@@ -92,10 +90,39 @@
         android:paddingEnd="0dp"
         android:paddingBottom="0dp"
         android:textColor="@color/white"
+
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:backgroundTint="@color/red_ec"
+        app:backgroundTint="@color/red_ec"
+        android:foreground="@drawable/ripple_grayc1c1"
+
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/menuRedBox"
         app:layout_constraintVertical_bias="0.134" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/secret_menu_rewards"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/roundedbutton"
+        android:backgroundTint="@color/red_ec"
+        android:letterSpacing="0.25"
+        android:onClick="goToCartButton"
+        android:paddingStart="0dp"
+        android:paddingLeft="0dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="0dp"
+        android:paddingBottom="0dp"
+        android:text="  Rewards  "
+        android:textColor="@color/white"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cart_button"
+        app:layout_constraintVertical_bias="0.482" />
 </androidx.constraintlayout.widget.ConstraintLayout>
