--- a/app/src/main/res/layout/activity_order_menu_page.xml
+++ b/app/src/main/res/layout/activity_order_menu_page.xml
@@ -84,14 +84,18 @@
     <Button
         android:id="@+id/CountinueButton"
         android:layout_width="264dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:background="@drawable/createbutton"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:backgroundTint="@color/red_ec"
         android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
         android:text="Add to Cart"
         android:textColor="@color/white"
         android:textStyle="bold"
         app:backgroundTint="@color/red_ec"
+
+
         app:layout_constraintEnd_toEndOf="@+id/MenuWhiteBox"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/MenuWhiteBox"
@@ -100,14 +104,16 @@
     <Button
         android:id="@+id/NutritionButton"
         android:layout_width="264dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:background="@drawable/createbutton"
         android:fontFamily="@font/sofia_regular"
         android:text="Nutrition"
         android:textColor="@color/white"
         android:textStyle="bold"
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:backgroundTint="@color/red_ec"
         app:backgroundTint="@color/red_ec"
+        android:foreground="@drawable/ripple_grayc1c1"
         app:layout_constraintBottom_toBottomOf="@+id/MenuWhiteBox"
         app:layout_constraintEnd_toEndOf="@+id/MenuWhiteBox"
         app:layout_constraintHorizontal_bias="0.504"
@@ -271,10 +277,14 @@
         android:layout_width="260dp"
         android:layout_height="44dp"
         android:layout_marginBottom="24dp"
-        android:background="@drawable/createbutton"
         android:fontFamily="@font/sofia_regular"
         android:onClick="customizeButton"
         android:text="Customize"
+
+        android:background="@drawable/profile_page_all_curved_corners_red"
+        android:backgroundTint="@color/red_ec"
+        android:foreground="@drawable/ripple_grayc1c1"
+
         app:backgroundTint="#491616"
         app:layout_constraintBottom_toTopOf="@+id/MenuWhiteBox"
         app:layout_constraintEnd_toEndOf="@+id/MenuRedBox"
