*User Interface Designs* - Modified several pages to have cleaner looking designs.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,7 +71,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="24dp"
-                android:background="@drawable/settings_page_all_white_curved_corners"
+                android:background="@drawable/white_box_red_stroke"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -79,11 +79,11 @@
             <TextView
                 android:id="@+id/order_now_box"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="160dp"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="24dp"
-                android:background="@drawable/settings_page_all_white_curved_corners"
+                android:background="@drawable/white_box_red_stroke"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -124,6 +124,7 @@
                 android:id="@+id/order_now_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
+                android:layout_marginTop="8dp"
                 android:background="@drawable/profile_page_all_curved_corners_red"
                 android:fontFamily="@font/sofia_regular"
                 android:foreground="@drawable/ripple_grayc1c1"
@@ -137,12 +138,10 @@
                 android:text="Order"
                 android:textColor="#FFFFFF"
                 app:backgroundTint="@color/red_ec"
-                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
                 app:layout_constraintEnd_toEndOf="@+id/order_now_box"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="@+id/order_now_box"
-                app:layout_constraintTop_toBottomOf="@+id/order_now2"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/order_now2" />
 
             <Button
                 android:id="@+id/testRewardsButton"
@@ -221,11 +220,11 @@
             <TextView
                 android:id="@+id/account_box"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="160dp"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="24dp"
-                android:background="@drawable/settings_page_all_white_curved_corners"
+                android:background="@drawable/white_box_red_stroke"
                 android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -282,6 +281,7 @@
                 android:textColor="#FFFFFF"
                 android:visibility="invisible"
                 app:backgroundTint="@color/red_ec"
+                android:layout_marginTop="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
                 app:layout_constraintEnd_toEndOf="@+id/account_box"
                 app:layout_constraintHorizontal_bias="0.498"
@@ -391,6 +391,7 @@
                 android:id="@+id/point_count_text"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
+                android:layout_marginBottom="4dp"
                 android:background="@drawable/settings_page_all_white_curved_corners"
                 android:fontFamily="@font/sofia_regular"
                 android:letterSpacing="0.1"
@@ -408,6 +409,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/settings_page_all_gray_curved_corners"
+                android:foreground="@drawable/ripple_grayc1c1"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/circle_coffee_MAX"
                 app:layout_constraintEnd_toEndOf="@+id/circle_coffee_MAX"
@@ -423,7 +425,6 @@
                 android:visibility="invisible"
 
                 android:foreground="@drawable/ripple_grayc1c1"
-
                 app:layout_constraintBottom_toBottomOf="@+id/rewards_white_box_top"
                 app:layout_constraintEnd_toEndOf="@+id/point_count_text"
                 app:layout_constraintHorizontal_bias="0.491"
@@ -436,6 +437,7 @@
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:visibility="visible"
+                android:foreground="@drawable/ripple_grayc1c1"
                 app:layout_constraintBottom_toBottomOf="@+id/default_gray_circle"
                 app:layout_constraintEnd_toEndOf="@+id/circle_coffee_MAX"
                 app:layout_constraintStart_toStartOf="@+id/circle_coffee_MAX"
