--- a/app/src/main/res/drawable/white_box_red_stroke.xml
+++ b/app/src/main/res/drawable/white_box_red_stroke.xml
@@ -8,7 +8,11 @@
         android:topRightRadius="25dp"
         android:topLeftRadius="25dp" />
 
-
+    <stroke
+        android:dashGap="10px"
+        android:dashWidth="0px"
+        android:width="2dp"
+        android:color="#CC800B0B" />
 
 
 </shape>
