--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -11,7 +11,7 @@
         android:id="@+id/menuWhiteBox1"
         android:layout_width="365dp"
         android:layout_height="100dp"
-        android:background="@drawable/profile_page_top_curved_box"
+        android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
         android:textAlignment="center"
         android:textColor="#000000"
@@ -38,9 +38,9 @@
 
     <TextView
         android:id="@+id/historyTopBox1"
-        android:layout_width="417dp"
+        android:layout_width="match_parent"
         android:layout_height="96dp"
-        android:background="#FFFFFF"
+        android:background="@drawable/top_page_red_curved_sides"
         android:fontFamily="@font/sofia_regular"
         android:text="@string/order_text"
         android:textAlignment="center"
@@ -65,9 +65,9 @@
 
     <TextView
         android:id="@+id/topMessage5"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="26dp"
-        android:background="@drawable/profile_page_top_curved_box"
+        android:background="@drawable/top_page_red_curved"
         android:fontFamily="@font/sofia_regular"
         android:text="@string/review_your_order"
         android:textAlignment="center"
